--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="name_job">Flask, MySQL, MongoDB</div>
         <p> Database connections in a Flask application using both MySQL and MongoDB.</p>
         <div class="btns">
-          <a href="https://github.com" target="_blank">
+          <a href="https://github.com/programmingnavigatorinfo/backend-services/tree/main/db-connections/flask" target="_blank">
             <button>Visit Github</button>
           </a>
           <a href="https://www.youtube.com" target="_blank">
@@ -40,7 +40,7 @@
         <div class="name_job">SpringBoot, MySQL, MongoDB</div>
         <p> Database connections in a Spring Boot application using both MySQL and MongoDB.</p>
         <div class="btns">
-          <a href="https://github.com" target="_blank">
+          <a href="https://github.com/programmingnavigatorinfo/backend-services/tree/main/db-connections/springboot" target="_blank">
             <button>Visit Github</button>
           </a>
           <a href="https://www.youtube.com" target="_blank">
@@ -55,7 +55,7 @@
         <div class="name_job">Express.js, MySQL, MongoDB</div>
         <p> Database connections in Express.js application using both MySQL and MongoDB.</p>
         <div class="btns">
-          <a href="https://github.com" target="_blank">
+          <a href="https://github.com/programmingnavigatorinfo/backend-services/tree/main/db-connections/express" target="_blank">
             <button>Visit Github</button>
           </a>
           <a href="https://www.youtube.com" target="_blank">
